Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24708

QDeclarativeCompiledBindingsPrivate: There is a memory leak here when QML AnchorChanges is used

    XMLWordPrintable

Details

    • bf5f97ae626af46742c315fa0c504f170977bca0

    Description

      QDeclarativeCompiledBindingsPrivate: There is a memory leak here when QML AnchorChanges is used. With the attached example it will never get the reference count of the QDeclarativeCompiledBindingsPrivate down to 0 and therefore it is never deleted. Valgrind didn't show up a problem from what I could see, but on Mac you can see if you instrument the example.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            andysh Andy Shaw
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes