Fix potential memory leak in AnchorChanges.

Task-number: QTBUG-24708
Change-Id: I4e24b3859f3881ebea4780872b7e4f3790e42d54
Reviewed-by: Yunqiao Yin <charles.yin@nokia.com>